Remove z-index -1 as it prevents users from clicking the checkbox (#324)

--- a/app/packs/stylesheets/custom/_checkbox.scss
+++ b/app/packs/stylesheets/custom/_checkbox.scss
@@ -5,7 +5,6 @@
   position: relative;
   padding-left: 20px;
   cursor: pointer;
-  z-index: -1;
 
   &:hover input ~ .checkmark {
     border: 1px solid $primary;
